- update to 0.8.3 - make the port ${PREFIX}-safe - use ${DATADIR} - instead of installing docs to ${DATADIR}, respect NOPORTDOCS and intall   to ${DOCSDIR} - take maintainership

--- a/news/slrnconf/Makefile
+++ b/news/slrnconf/Makefile
@@ -5,7 +5,7 @@
 # $FreeBSD$
 
 PORTNAME=	slrnconf
-PORTVERSION=	0.8.2
+PORTVERSION=	0.8.3
 CATEGORIES=	news
 MASTER_SITES=	http://home.arcor.de/kaffeetisch/downloads/
 
@@ -13,30 +13,29 @@ MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Graphical configuation utility for the newsreader slrn
 
 BUILD_DEPENDS=	slrn:${PORTSDIR}/news/slrn \
-		${SITE_PERL}/${PERL_ARCH}/Gtk.pm:${PORTSDIR}/x11-toolkits/p5-Gtk \
+		${SITE_PERL}/${PERL_ARCH}/Gtk2.pm:${PORTSDIR}/x11-toolkits/p5-Gtk2 \
 		${SITE_PERL}/Parse/RecDescent.pm:${PORTSDIR}/devel/p5-Parse-RecDescent
 
+WRKSRC=	${WRKDIR}/${PORTNAME}
 USE_REINPLACE=	yes
 
 post-patch:
-.for file in Makefile
-	@${REINPLACE_CMD} -e \
-	's|%%PREFIX%%|${PREFIX}|g' \
-		${WRKSRC}/${file}
-.endfor
+	@${REINPLACE_CMD} -e 's|PREFIX=|PREFIX?=|' ${WRKSRC}/Makefile
 
 do-install:
-	@${MKDIR} ${PREFIX}/share/${PORTNAME}/help
-	@${INSTALL_DATA} ${WRKSRC}/help/* \
-		${PREFIX}/share/${PORTNAME}/help
-	@${MKDIR} ${PREFIX}/share/${PORTNAME}/data
-	@${INSTALL_DATA} ${WRKSRC}/data/* \
-		${PREFIX}/share/${PORTNAME}/data
-	@${INSTALL_SCRIPT} ${WRKSRC}/slrnconf \
-		${PREFIX}/bin
-.for i in ABOUT COPYING README preferences.pm rc_grammar.pm ui.pm
-	@${INSTALL_DATA} ${WRKSRC}/${i} \
-		${PREFIX}/share/${PORTNAME}
+	@${MKDIR} ${DATADIR}/help
+	@${INSTALL_DATA} ${WRKSRC}/help/* ${DATADIR}/help
+	@${MKDIR} ${DATADIR}/data
+	@${INSTALL_DATA} ${WRKSRC}/data/* ${DATADIR}/data
+	@${INSTALL_SCRIPT} ${WRKSRC}/slrnconf ${PREFIX}/bin
+.for i in preferences.pm rc_grammar.pm ui.pm
+	@${INSTALL_DATA} ${WRKSRC}/${i} ${DATADIR}
 .endfor
+.if !defined(NOPORTDOCS)
+	@${MKDIR} ${DOCSDIR}
+.for i in ABOUT COPYING README
+	@${INSTALL_DATA} ${WRKSRC}/${i} ${DOCSDIR}
+.endfor
+.endif
 
 .include <bsd.port.mk>
