--- a/textproc/unrtf/Makefile
+++ b/textproc/unrtf/Makefile
@@ -5,25 +5,27 @@
 # $FreeBSD$
 
 PORTNAME=	unrtf
-PORTVERSION=	0.18.1
+PORTVERSION=	0.19.1
 CATEGORIES=	textproc
-MASTER_SITES=	${MASTER_SITE_GNU}
+MASTER_SITES=	http://unrtf.50megs.com/ \
+		${MASTER_SITE_GNU}
 MASTER_SITE_SUBDIR=	${PORTNAME}
 
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	A converter from RTF to several formats, including HTML and LaTeX
 
-WRKSRC=		${WRKDIR}/unrtf
-
+USE_REINPLACE=	yes
 ALL_TARGET=	unrtf
 
 MAN1=		unrtf.1
 
-post-install:
-	${INSTALL_MAN} ${WRKSRC}/unrtf.1 ${PREFIX}/man/man1/${MAN1}
-.if !defined(NOPORTDOCS)
-	@${MKDIR} ${DOCSDIR}
-	${INSTALL_DATA} ${WRKSRC}/doc/unrtf.html ${DOCSDIR}
-.endif
+post-patch:
+	@${REINPLACE_CMD} -e "s|^CC|#CC| ; s|^CFLAGS|#CFLAGS| ; \
+		s|||" ${WRKSRC}/Makefile
+	@${REINPLACE_CMD} -e "s|<malloc\.h>|<stdlib.h>|" ${WRKSRC}/malloc.c
+
+do-install:
+	${INSTALL_PROGRAM} ${WRKSRC}/unrtf ${PREFIX}/bin
+	${INSTALL_MAN} ${WRKSRC}/unrtf.1 ${MAN1PREFIX}/man/man1
 
 .include <bsd.port.mk>
