Add Berkeley DB 4.2.52 after repocopy from db41.
Note to other porters who want their port to depend on this one: Use

LIB_DEPENDS=db-4.2.2:${PORTSDIR}/databases/db42-nocrypto

Usually, setting
CONFIGURE_ENV?=	CPPFLAGS="-I${LOCALBASE}/include/db42"
		LDFLAGS="-L${LOCALBASE}/lib/db42" LIBS="-ldb-4.2"

will then work to get the right DB library. At run time, the proper
library will be looked up by its SONAME, which is "libdb-4.2.so.2" and
resides in /usr/local/lib.

PR:		ports/60943
Submitted by:	Matthias Andree <matthias.andree@gmx.de>

--- a/databases/db42-nocrypto/Makefile
+++ b/databases/db42-nocrypto/Makefile
@@ -1,6 +1,6 @@
-# Ports collection makefile for:	db41-nocrypto
-# Date created:				2003-02-13
-# Whom:					matthias.andree@web.de
+# Ports collection makefile for:	db42-nocrypto
+# Date created:				2004-01-04
+# Whom:					matthias.andree@gmx.de
 #
 # $FreeBSD$
 #
@@ -8,7 +8,9 @@
 PKGNAMESUFFIX=	-nocrypto
 DISTNAME=	db-${PORTVERSION}.NC
 
-MASTERDIR=	${.CURDIR}/../db41
+MAINTAINER=	matthias.andree@gmx.de
+
+MASTERDIR=	${.CURDIR}/../db42
 MD5_FILE=	${.CURDIR}/distinfo
 
 .include "${MASTERDIR}/Makefile"
