- Move everybuddy to ayttm, and update to version 0.4.5
PR:		60273
Submitted by:	Ports Fury

--- a/net/Makefile
+++ b/net/Makefile
@@ -35,6 +35,7 @@
     SUBDIR += aslookup
     SUBDIR += aspathtree
     SUBDIR += asterisk
+    SUBDIR += ayttm
     SUBDIR += b2bua
     SUBDIR += balance
     SUBDIR += bandwidthd
