Add mod_watch4 4.3, an Apache2 module to monitor bandwidth usage, for use with MRTG etc.
PR:		57865
Submitted by:	Toshiya SAITOH <toshiya@saitoh.nu>
Approved by:    erwin (mentor) (implicitly)

--- a/www/Makefile
+++ b/www/Makefile
@@ -273,6 +273,7 @@
     SUBDIR += mod_v2h
     SUBDIR += mod_vdbh
     SUBDIR += mod_watch
+    SUBDIR += mod_watch4
     SUBDIR += mod_webapp
     SUBDIR += mod_zap
     SUBDIR += moinmoin
