- fix SSL detection problem on stable with base OpenSSL [1]   Force the use of SSL_EXPERIMENTAL_ENGINE *only* if the user uses   -STABLE and base OpenSSL.   This is an *apache* problem. It's not the port.   I strongly encourage users to use OpenSSL from ports.    From httpd-2.0 Status:    * mod_ssl: fix a link failure when the openssl-engine libraries are      present but the engine headers are missing. - fix a typo in WITH_DBM, should be bdb and not db [1]   I keep db for backward compatibility - Add WITH_APR_FROM_PORTS to use devel/apr with apache2.   !!! WARNING !!! apache-2.0.48 is designed to work with apr 0.9.5.
Noticed by:     Fritz Heinrichmeyer <Fritz.Heinrichmeyer@Fernuni-Hagen.de> [1]
Approved by:    erwin (mentor)

--- a/www/apache2/Makefile
+++ b/www/apache2/Makefile
@@ -74,6 +74,16 @@ USE_OPENSSL=	yes
 CONFIGURE_ARGS+=	--enable-static-support
 .endif
 
+# Untested and may fail !
+.if defined(WITH_APR_FROM_PORTS)
+.    if defined (WITH_BDB) || defined(WITH_BERKELEYDB)
+BROKEN=			"You can't set WITH_BDB or WITH_BERKELEYDB when WITH_APR_FROM_PORTS is defined"
+.endif	
+LIB_DEPENDS+=		apr-0.9:${PORTSDIR}/devel/apr
+CONFIGURE_ARGS+=	--with-apr=${LOCALBASE}/bin/apr-config \
+                	--with-apr-util=${LOCALBASE}/bin/apr-config
+.endif
+
 # for slave ports
 .if !defined(MASTERDIR)
 APACHEDIR=	${.CURDIR}
