--- a/www/apache20/Makefile
+++ b/www/apache20/Makefile
@@ -74,6 +74,16 @@ USE_OPENSSL=	yes
 CONFIGURE_ARGS+=	--enable-static-support
 .endif
 
+# Untested and may fail !
+.if defined(WITH_APR_FROM_PORTS)
+.    if defined (WITH_BDB) || defined(WITH_BERKELEYDB)
+BROKEN=			"You can't set WITH_BDB or WITH_BERKELEYDB when WITH_APR_FROM_PORTS is defined"
+.endif	
+LIB_DEPENDS+=		apr-0.9:${PORTSDIR}/devel/apr
+CONFIGURE_ARGS+=	--with-apr=${LOCALBASE}/bin/apr-config \
+                	--with-apr-util=${LOCALBASE}/bin/apr-config
+.endif
+
 # for slave ports
 .if !defined(MASTERDIR)
 APACHEDIR=	${.CURDIR}
