New port: www/zope-cmfphotoalbum
	CMFPhotoAlbum is a product for Zope/CMF

	It allows users to browse gallery of thumbnail images.

	WWW: http://plone.org/collective

PR:		ports/61067
Submitted by:	Khairil Yusof <kaeru@inigo-tech.com>

--- a/www/Makefile
+++ b/www/Makefile
@@ -598,6 +598,7 @@
     SUBDIR += zope-cmf13
     SUBDIR += zope-cmfforum
     SUBDIR += zope-cmfphoto
+    SUBDIR += zope-cmfphotoalbum
     SUBDIR += zope-cmfquickinstaller
     SUBDIR += zope-exuserfolder
     SUBDIR += zope-formulator
