Add mod_auth_mysql41_ap2 1.00, mySQL 4.1 and Apache 2 port of mod_auth_mysql.
PR:		57503
Submitted by:	Douglas A. Maske <maske@maske.org>
Approved by:    erwin (mentor) (implicity)

--- a/www/Makefile
+++ b/www/Makefile
@@ -197,6 +197,7 @@
     SUBDIR += mod_auth_external2
     SUBDIR += mod_auth_kerb
     SUBDIR += mod_auth_mysql
+    SUBDIR += mod_auth_mysql41_ap2
     SUBDIR += mod_auth_mysql_another
     SUBDIR += mod_auth_pam
     SUBDIR += mod_auth_pam2
