New Port: kde_api_reference_31, the kde api reference
	API reference for KDE 3.1

Note that the port is installed in ports/x11 and not in ports/devel
to keep it closer to the kde3 libraries which are installed in
ports/x11. Changed the name to match the gtk##-apireference for
concistensy[sp].

PR:		ports/60990
Submitted by:	Heiner Eichmann <h.eichmann@gmx.de>

--- a/x11/Makefile
+++ b/x11/Makefile
@@ -73,6 +73,7 @@
     SUBDIR += kb2mb2
     SUBDIR += kde-lite
     SUBDIR += kde3
+    SUBDIR += kde31-apireference
     SUBDIR += kdebase3
     SUBDIR += kdelibs3
     SUBDIR += keylaunch
