Add a copy of the Entity MIB to this package (for some reason I thought net-snmp included it in the default set of MIBs, but apparently not). Waiting for word from Cisco as to whether we can redistribute their MIB modules.

--- a/net/entitymib/Makefile
+++ b/net/entitymib/Makefile
@@ -7,10 +7,12 @@
 
 PORTNAME=	entitymib
 PORTVERSION=	20040109
+PORTREVISION=	1
 CATEGORIES=	net perl5
-MASTER_SITES=	${MASTER_SITE_LOCAL}
+MASTER_SITES=	${MASTER_SITE_LOCAL} \
+		http://www.mibexplorer.com/export/ietf/:mibs
 MASTER_SITE_SUBDIR=	wollman
-DISTFILES=	entitymib entitymib.1
+DISTFILES=	entitymib entitymib.1 ENTITY-MIB.txt:mibs
 EXTRACT_ONLY=
 
 MAINTAINER=	wollman@FreeBSD.org
@@ -27,5 +29,6 @@ NO_BUILD=	nope
 do-install:
 	${INSTALL_SCRIPT} ${DISTDIR}/entitymib ${PREFIX}/bin/entitymib
 	${INSTALL_MAN} ${DISTDIR}/entitymib.1 ${MANPREFIX}/man/man1
+	${INSTALL_DATA} ${DISTDIR}/ENTITY-MIB.txt ${PREFIX}/share/snmp/mibs
 
 .include <bsd.port.mk>
