Add eclipse-pmd 1.1.2, scan Java source code and look for potential problems.
PR:		57956
Submitted by:	Bruno Van Den Bossche <bruno.van.den.bossche@pandora.be>

--- a/java/Makefile
+++ b/java/Makefile
@@ -17,6 +17,7 @@
     SUBDIR += eclipse-gef
     SUBDIR += eclipse-gef-examples
     SUBDIR += eclipse-langpack
+    SUBDIR += eclipse-pmd
     SUBDIR += forte
     SUBDIR += gj
     SUBDIR += gj-jdk11
